tests/react_ref_as_prop/react_ref_as_prop.exp
Error ------------------------------------------------------------------------------ component_syntax_components.js:2:85

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   2| declare export component CompWithOptionalRefProp(foo: string, ref?: React.RefSetter<HTMLElement>);
                                                                                          ^^^^^^^^^^^


Error ------------------------------------------------------------------------------ component_syntax_components.js:3:84

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   3| declare export component CompWithRequiredRefProp(foo: string, ref: React.RefSetter<HTMLElement>);
                                                                                         ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- fn_components.js:2:90

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   2| declare export function FnWithOptionalRefProp(props: {foo: string, ref?: React.RefSetter<HTMLElement>}): React.Node;
                                                                                               ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- fn_components.js:3:89

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   3| declare export function FnWithRequiredRefProp(props: {foo: string, ref: React.RefSetter<HTMLElement>}): React.Node;
                                                                                              ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:14:2

Cannot cast object literal to `React.ElementConfig` because property `foo` is missing in object literal [1] but exists
in props of component [2]. [incompatible-type]

   implicit_instantiation.js:14:2
   14| ({}) as React.ElementConfig<typeof IdMappedFnWithoutRefProp>; // error: missing foo prop
        ^^ [1]

References:
   implicit_instantiation.js:14:9
   14| ({}) as React.ElementConfig<typeof IdMappedFnWithoutRefProp>; // error: missing foo prop
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:15:2

Cannot cast object literal to `React.ElementConfig` because property `foo` is missing in object literal [1] but exists
in props of component [2]. [incompatible-type]

   implicit_instantiation.js:15:2
   15| ({}) as React.ElementConfig<typeof IdMappedFnWithOptionalRefProp>; // error: missing foo prop
        ^^ [1]

References:
   implicit_instantiation.js:15:9
   15| ({}) as React.ElementConfig<typeof IdMappedFnWithOptionalRefProp>; // error: missing foo prop
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:16:2

Cannot cast object literal to `React.ElementConfig` because property `foo` is missing in object literal [1] but exists
in props of component [2]. [incompatible-type]

   implicit_instantiation.js:16:2
   16| ({}) as React.ElementConfig<typeof IdMappedFnWithRequiredRefProp>; // error: missing foo prop
        ^^ [1]

References:
   implicit_instantiation.js:16:9
   16| ({}) as React.ElementConfig<typeof IdMappedFnWithRequiredRefProp>; // error: missing foo prop
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:18:1

Cannot cast `null` to `React.ElementRef` because null [1] is incompatible with undefined [2]. [incompatible-type]

   implicit_instantiation.js:18:1
   18| null as React.ElementRef<typeof IdMappedFnWithoutRefProp>; // error: null ~> void
       ^^^^ [1]

References:
   implicit_instantiation.js:18:9
   18| null as React.ElementRef<typeof IdMappedFnWithoutRefProp>; // error: null ~> void
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:19:5

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   19| new HTMLElement() as React.ElementRef<typeof IdMappedFnWithOptionalRefProp>; // ok
           ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:21:5

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   21| new HTMLElement() as React.ElementRef<typeof IdMappedFnWithRequiredRefProp>; // ok
           ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:33:2

Cannot cast object literal to `React.ElementConfig` because property `foo` is missing in object literal [1] but exists
in props of component [2]. [incompatible-type]

   implicit_instantiation.js:33:2
   33| ({}) as React.ElementConfig<typeof IdMappedCompWithoutRefProp>; // error: missing foo prop
        ^^ [1]

References:
   implicit_instantiation.js:33:9
   33| ({}) as React.ElementConfig<typeof IdMappedCompWithoutRefProp>; // error: missing foo prop
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:34:2

Cannot cast object literal to `React.ElementConfig` because property `foo` is missing in object literal [1] but exists
in props of component [2]. [incompatible-type]

   implicit_instantiation.js:34:2
   34| ({}) as React.ElementConfig<typeof IdMappedCompWithOptionalRefProp>; // error: missing foo prop
        ^^ [1]

References:
   implicit_instantiation.js:34:9
   34| ({}) as React.ElementConfig<typeof IdMappedCompWithOptionalRefProp>; // error: missing foo prop
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:35:2

Cannot cast object literal to `React.ElementConfig` because property `foo` is missing in object literal [1] but exists
in props of component [2]. [incompatible-type]

   implicit_instantiation.js:35:2
   35| ({}) as React.ElementConfig<typeof IdMappedCompWithRequiredRefProp>; // error: missing foo prop
        ^^ [1]

References:
   implicit_instantiation.js:35:9
   35| ({}) as React.ElementConfig<typeof IdMappedCompWithRequiredRefProp>; // error: missing foo prop
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:37:1

Cannot cast `null` to `React.ElementRef` because null [1] is incompatible with undefined [2]. [incompatible-type]

   implicit_instantiation.js:37:1
   37| null as React.ElementRef<typeof IdMappedCompWithoutRefProp>; // error: null ~> empty
       ^^^^ [1]

References:
   implicit_instantiation.js:37:9
   37| null as React.ElementRef<typeof IdMappedCompWithoutRefProp>; // error: null ~> empty
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:38:5

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   38| new HTMLElement() as React.ElementRef<typeof IdMappedCompWithOptionalRefProp>; // ok
           ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- implicit_instantiation.js:40:5

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   40| new HTMLElement() as React.ElementRef<typeof IdMappedCompWithRequiredRefProp>; // ok
           ^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- jsx_checking.js:6:2

Cannot create `FnWithRequiredRefProp` element because property `ref` is missing in props [1] but exists in object
type [2]. [incompatible-type]

   jsx_checking.js:6:2
   6| <FnWithRequiredRefProp foo="bar" />; // error: missing ref prop
       ^^^^^^^^^^^^^^^^^^^^^

References:
   jsx_checking.js:6:1
   6| <FnWithRequiredRefProp foo="bar" />; // error: missing ref prop
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   fn_components.js:3:54
   3| declare export function FnWithRequiredRefProp(props: {foo: string, ref: React.RefSetter<HTMLElement>}): React.Node;
                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- jsx_checking.js:7:24

Cannot create `FnWithoutRefProp` element because number [1] is incompatible with string [2] in property `foo`.
[incompatible-type]

   jsx_checking.js:7:24
   7| <FnWithoutRefProp foo={1} />; // error: 1 ~> string, normal checking still works
                             ^ [1]

References:
   fn_components.js:1:55
   1| declare export function FnWithoutRefProp(props: {foo: string}): React.Node;
                                                            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- jsx_checking.js:8:2

Cannot create `FnWithoutRefProp` element because property `ref` is extra in props [1] but missing in object type [2].
Exact objects do not accept extra props. [incompatible-type]

   jsx_checking.js:8:2
   8| <FnWithoutRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // error: extra ref prop
       ^^^^^^^^^^^^^^^^

References:
   jsx_checking.js:8:1
   8| <FnWithoutRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // error: extra ref prop
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   fn_components.js:1:49
   1| declare export function FnWithoutRefProp(props: {foo: string}): React.Node;
                                                      ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- jsx_checking.js:8:39

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   8| <FnWithoutRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // error: extra ref prop
                                            ^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- jsx_checking.js:9:44

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   9| <FnWithOptionalRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // ok
                                                 ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- jsx_checking.js:11:44

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   11| <FnWithRequiredRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // ok
                                                  ^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- jsx_checking.js:16:2

Cannot create `CompWithRequiredRefProp` element because property `ref` is missing in props [1] but exists in props of
component CompWithRequiredRefProp [2]. [incompatible-type]

   jsx_checking.js:16:2
   16| <CompWithRequiredRefProp foo="bar" />; // error: missing ref prop
        ^^^^^^^^^^^^^^^^^^^^^^^

References:
   jsx_checking.js:16:1
   16| <CompWithRequiredRefProp foo="bar" />; // error: missing ref prop
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   component_syntax_components.js:3:49
    3| declare export component CompWithRequiredRefProp(foo: string, ref: React.RefSetter<HTMLElement>);
                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- jsx_checking.js:17:26

Cannot create `CompWithoutRefProp` element because number [1] is incompatible with string [2] in property `foo`.
[incompatible-type]

   jsx_checking.js:17:26
   17| <CompWithoutRefProp foo={1} />; // error: 1 ~> string, normal checking still works
                                ^ [1]

References:
   component_syntax_components.js:1:50
    1| declare export component CompWithoutRefProp(foo: string);
                                                        ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- jsx_checking.js:18:2

Cannot create `CompWithoutRefProp` element because property `ref` is extra in props [1] but missing in props of
component CompWithoutRefProp [2]. Exact objects do not accept extra props. [incompatible-type]

   jsx_checking.js:18:2
   18| <CompWithoutRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // error: extra ref prop
        ^^^^^^^^^^^^^^^^^^

References:
   jsx_checking.js:18:1
   18| <CompWithoutRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // error: extra ref prop
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   component_syntax_components.js:1:44
    1| declare export component CompWithoutRefProp(foo: string);
                                                  ^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- jsx_checking.js:18:41

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   18| <CompWithoutRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // error: extra ref prop
                                               ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- jsx_checking.js:19:46

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   19| <CompWithOptionalRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // ok
                                                    ^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- jsx_checking.js:21:46

Cannot resolve name `HTMLElement`. [cannot-resolve-name]

   21| <CompWithRequiredRefProp foo="bar" ref={(_: ?HTMLElement) => {}} />; // ok
                                                    ^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- subtyping.js:6:1

Cannot cast `FnWithoutRefProp` to component because property `ref` is extra in props [1] but missing in object type [2].
Exact objects do not accept extra props. [incompatible-type]

   subtyping.js:6:1
   6| FnWithoutRefProp as component(foo: string, ref: React.RefSetter<mixed>); // error, since {ref: React.RefSetter<mixed>} ~> {} should be an error
      ^^^^^^^^^^^^^^^^

References:
   subtyping.js:6:21
   6| FnWithoutRefProp as component(foo: string, ref: React.RefSetter<mixed>); // error, since {ref: React.RefSetter<mixed>} ~> {} should be an error
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   fn_components.js:1:49
   1| declare export function FnWithoutRefProp(props: {foo: string}): React.Node;
                                                      ^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ subtyping.js:12:1

Cannot cast `FnWithRequiredRefProp` to component because property `ref` is missing in props [1] but exists in object
type [2]. [incompatible-type]

   subtyping.js:12:1
   12| FnWithRequiredRefProp as component(foo: string); // error: missing ref prop
       ^^^^^^^^^^^^^^^^^^^^^

References:
   subtyping.js:12:26
   12| FnWithRequiredRefProp as component(foo: string); // error: missing ref prop
                                ^^^^^^^^^^^^^^^^^^^^^^ [1]
   fn_components.js:3:54
    3| declare export function FnWithRequiredRefProp(props: {foo: string, ref: React.RefSetter<HTMLElement>}): React.Node;
                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ subtyping.js:13:1

Cannot cast `FnWithRequiredRefProp` to `React.ComponentType` because property `ref` is missing in props [1] but exists
in object type [2]. [incompatible-type]

   subtyping.js:13:1
    13| FnWithRequiredRefProp as React.ComponentType<{+foo: string}>; // error: missing ref prop
        ^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:129:44
   129|   type ComponentType<-P: {...}> = component(...P);
                                                   ^^^^^^ [1]
   fn_components.js:3:54
     3| declare export function FnWithRequiredRefProp(props: {foo: string, ref: React.RefSetter<HTMLElement>}): React.Node;
                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ subtyping.js:18:1

Cannot cast `CompWithoutRefProp` to component because property `ref` is extra in props of component [1] but missing in
props of component CompWithoutRefProp [2]. Exact objects do not accept extra props. [incompatible-type]

   subtyping.js:18:1
   18| CompWithoutRefProp as component(foo: string, ref: React.RefSetter<mixed>); // error: React.RefSetter<mixed> ~> void
       ^^^^^^^^^^^^^^^^^^

References:
   subtyping.js:18:23
   18| CompWithoutRefProp as component(foo: string, ref: React.RefSetter<mixed>); // error: React.RefSetter<mixed> ~> void
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   component_syntax_components.js:1:44
    1| declare export component CompWithoutRefProp(foo: string);
                                                  ^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ subtyping.js:24:1

Cannot cast `CompWithRequiredRefProp` to component because property `ref` is missing in props of component [1] but
exists in props of component CompWithRequiredRefProp [2]. [incompatible-type]

   subtyping.js:24:1
   24| CompWithRequiredRefProp as component(foo: string); // ok
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   subtyping.js:24:28
   24| CompWithRequiredRefProp as component(foo: string); // ok
                                  ^^^^^^^^^^^^^^^^^^^^^^ [1]
   component_syntax_components.js:3:49
    3| declare export component CompWithRequiredRefProp(foo: string, ref: React.RefSetter<HTMLElement>);
                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ subtyping.js:25:1

Cannot cast `CompWithRequiredRefProp` to `React.ComponentType` because property `ref` is missing in object type [1] but
exists in props of component CompWithRequiredRefProp [2]. [incompatible-type]

   subtyping.js:25:1
   25| CompWithRequiredRefProp as React.ComponentType<{+foo: string}>; // ok
       ^^^^^^^^^^^^^^^^^^^^^^^

References:
   subtyping.js:25:48
   25| CompWithRequiredRefProp as React.ComponentType<{+foo: string}>; // ok
                                                      ^^^^^^^^^^^^^^ [1]
   component_syntax_components.js:3:49
    3| declare export component CompWithRequiredRefProp(foo: string, ref: React.RefSetter<HTMLElement>);
                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 34 errors
